prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/import_05.diag.txt
ERROR: unrecognised escape char
testData/diagnostics/import_05.nut:1:5

from "../a\..\b\folder/file.nut" import *
     ^-----


